fixed category components so that the spacing is equal. They're also now clickable. Changed it so the top carousel has stock cards in it for now (will later change to featured items) and fixed the spacing for the bottom carousel. Changed the background image for the bottom carousel, and overall on the whole page added some spacing/padding/margin

--- a/src/components/carousel1/style.css
+++ b/src/components/carousel1/style.css
@@ -1,11 +1,24 @@
 #carousel1{
     background: rgb(241, 241, 241);
-    text-align: center;
+    margin-top: 5vh;
+    display: flex;
+    align-items: center;
+   
     
 }
 
+
 .image{
-    min-height: 30vw;
-    min-width: 40vw;
-    margin-top: 4vw;
+    
+    min-width: 30vw;
+    display: flex;
+    align-items: center;
+    /* margin-top: 3vh; */
+    
+ 
 }
+
+/* .cardStyle{
+    
+    
+} */
